<resources>
    <string name="app_name">Resumae</string>
    <string name="no_items_text">Nothing here.\nTap the add button!</string>
    <string name="createResumeTitle">Create Resume</string>
    <string name="resumeName">Resume Name</string>
    <string name="personalName">Name</string>
    <string name="personalPhone">Phone</string>
    <string name="personalEmail">Email Address</string>
    <string name="personalCurrentCity">Residence Address</string>
    <string name="personalObjective">Career Objective</string>
    <string name="personalExperienceDuration">Total Years of experience</string>
    <string name="personalHobbies">Hobbies</string>
    <string name="saveButtonText">Save</string>
    <string name="educationInstituteName">Institute Name</string>
    <string name="educationClass">Class</string>
    <string name="educationYearOfGraduation">Year</string>
    <string name="educationPerformance">Performance</string>
    <string name="saveButtonSaved">Saved</string>
    <string name="experienceCompanyName">Company</string>
    <string name="experienceJobTitle">Job Title</string>
    <string name="experienceDuration">Duration(in years)</string>
    <string name="skillName">Skills</string>
    <string name="projectName">Name</string>
    <string name="projectRole">Role</string>
    <string name="projectTeamSize">Team Size</string>
    <string name="projectTechUsed">Technology</string>
    <string name="projectSummary">Project Summary</string>
    <string name="phoneHelperText">Should be 10 digits</string>
    <string name="expHelperText">Total years of Experience</string>
    <string name="hobbiesHelperText">E.g: Running, Swimming</string>
    <string name="resumeNameHelperText">Give this resume a fun name!</string>
    <string name="deleteButtonText">Delete</string>
    <string name="done">Done</string>
    <string name="savetopdf">Save As Pdf</string>
    <string name="objectiveHelperText">Tell us about your Career Objectives!</string>
    <string name="instituteNameHelperText">Name of the school or college</string>
    <string name="qualificationHelperText">Your degree, branch, or class from this institute</string>
    <string name="performanceHelperText">CGPA, percentage, or grade</string>
    <string name="educationYearHelperText">Year of passing</string>
    <string name="companyNameHelperText">Name of the company where you worked</string>
    <string name="skillNameHelperText">Name of the skill eg: Java, Kotlin, Flutter</string>
    <string name="jobTitleHelperText">Eg. Backend Web Developer</string>
    <string name="experienceDurationHelperText">Time period of this job</string>
    <string name="projectNameHelperText">Name of the project</string>
    <string name="projectRoleHelperText">Your role in the project</string>
    <string name="projectTeamSizeHelperText">Size of the team you worked with</string>
    <string name="projectTechUsedHelperText">The Technology you worked with</string>
    <string name="projectSummaryHelperText">Summarize the project</string>
    <string name="editButtonText">Edit</string>
    <string name="about">About</string>
    <string name="preview">Preview</string>

</resources>