<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/mImageView"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:minHeight="48dp"
            android:minWidth="48dp"
            android:src="@drawable/ic_baseline_account_box_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_gravity="center_horizontal"
            android:contentDescription="Our Image"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/personalNameWrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@id/mImageView"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:textColorHint="@color/secondaryDarkColor"
            app:boxCornerRadiusTopStart="4dp"
            app:boxCornerRadiusTopEnd="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/personalNameEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/personalName"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textColor="@color/secondaryTextColor"
                android:textCursorDrawable="@color/secondaryTextColor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/personalPhoneWrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/personalNameWrapper"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:boxCornerRadiusTopStart="4dp"
            app:boxCornerRadiusTopEnd="4dp"
            app:helperText="@string/phoneHelperText"
            app:helperTextTextAppearance="@style/helper_text_appearance"
            android:textColorHint="@color/secondaryDarkColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/personalPhoneEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/personalPhone"
                android:inputType="phone"
                android:singleLine="true"
                android:textColor="@color/secondaryTextColor"
                android:textCursorDrawable="@color/secondaryTextColor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/personalEmailWrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/personalPhoneWrapper"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:boxCornerRadiusTopStart="4dp"
            app:boxCornerRadiusTopEnd="4dp"
            android:textColorHint="@color/secondaryDarkColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/personalEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/personalEmail"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/secondaryTextColor"
                android:textCursorDrawable="@color/secondaryTextColor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/personalAddressWrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/personalEmailWrapper"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:boxCornerRadiusTopStart="4dp"
            app:boxCornerRadiusTopEnd="4dp"
            android:textColorHint="@color/secondaryDarkColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/personalAddressEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/personalCurrentCity"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/secondaryTextColor"
                android:textCursorDrawable="@color/secondaryTextColor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/personalExpWrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/personalAddressWrapper"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:boxCornerRadiusTopStart="4dp"
            app:boxCornerRadiusTopEnd="4dp"
            app:helperText="@string/expHelperText"
            app:helperTextTextAppearance="@style/helper_text_appearance"
            android:textColorHint="@color/secondaryDarkColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/personalExpEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/personalExperienceDuration"
                android:inputType="numberSigned"
                android:textColor="@color/secondaryTextColor"
                android:textCursorDrawable="@color/secondaryTextColor" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/personalDescriptionWrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/personalExpWrapper"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:boxCornerRadiusTopStart="4dp"
            app:boxCornerRadiusTopEnd="4dp"
            android:textColorHint="@color/secondaryDarkColor"
            app:helperText="@string/objectiveHelperText"
            app:helperTextTextAppearance="@style/helper_text_appearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/personalObjectiveEditText"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="top"
                android:hint="@string/personalObjective"
                android:inputType="textMultiLine"
                android:textColor="@color/secondaryTextColor"
                android:textCursorDrawable="@color/secondaryTextColor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/resumeNameWrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/personalDescriptionWrapper"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:boxCornerRadiusTopStart="4dp"
            app:boxCornerRadiusTopEnd="4dp"
            android:textColorHint="@color/secondaryDarkColor"
            app:helperText="@string/resumeNameHelperText"
            app:helperTextTextAppearance="@style/helper_text_appearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/resumeNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/resumeName"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textColor="@color/secondaryTextColor"
                android:textCursorDrawable="@color/secondaryTextColor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/personalSaveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/saveButtonText"
            app:backgroundTint="@color/primaryColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resumeNameWrapper" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>